--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
 			<version>1.3.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>4.3.14.RELEASE</version>
+		</dependency>
+
 		<!-- Spring 单元测试 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -85,7 +91,14 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
-			<scope>test</scope>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.21.RELEASE</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
